--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.93.2",
     "scss": "^0.2.4"
   },
